--- a/src/style.css
+++ b/src/style.css
@@ -269,12 +269,14 @@ html {
 
 .heading {
   font-size: 2.4em !important;
-  padding-left: 50px !important;
 }
 
 .heading-name {
   font-size: 2.5em !important;
-  padding-left: 45px !important;
+}
+
+.footer-body {
+  z-index: 99;
 }
 
 .main-name {
@@ -551,11 +553,10 @@ html {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border: 2px solid rgba(200, 137, 230, 0.637) !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
-  display: table !important;
   box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
@@ -566,17 +567,32 @@ html {
     margin: 10px !important;
   }
 }
+.tech-icons span {
+  font-size: 18px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
 
 .tech-icons:hover {
-  transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2px solid rgba(197, 115, 230, 0.883) !important;
 }
+.tech-icons:hover span {
+  opacity: 1;
+}
+
 .tech-icon-images {
   padding: 20px !important;
   line-height: 1.6 !important;
 }
-
+.about-img img {
+  border-radius: 60px;
+  box-shadow: 0 5px 20px 0  var(--imp-text-color);
+}
 .quote-card-view {
   border: none !important;
   color: white !important;
@@ -603,6 +619,7 @@ html {
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
   color: white !important;
+  min-height: calc(100vh - 58px);
 }
 
 .resume {
@@ -734,4 +751,9 @@ html {
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+
+#home {
+  z-index: 99;
+  min-height: calc(100vh - 58px);
 }
