--- a/src/style.css
+++ b/src/style.css
@@ -443,6 +443,7 @@ html {
 /* Projects */
 /* --------- */
 .project-section {
+  min-height: 100vh;
   position: relative !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
@@ -696,6 +697,18 @@ html {
   border: 2px solid #8a49a8;
 }
 
+.resume .resume-item::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  bottom: 0;
+  background: #fff;
+  border: 2px solid #8a49a8;
+}
+
 .like-item {
   padding-top: 10px !important;
   font-size: 1.1em !important;
@@ -755,5 +768,5 @@ html {
 
 #home {
   z-index: 99;
-  min-height: calc(100vh - 58px);
+  min-height: 100vh;
 }
